<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/txtCurrentSettings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnDeleteAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_deleteAll" />

    <EditText
        android:id="@+id/txtNumberToDelete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >
        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/btnDeleteSome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_deleteSome" />

    <Button
        android:id="@+id/btnSendDistressAlert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_sendDistressAlert" />

    <Button
        android:id="@+id/btnClearDistressAlerts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_clearDistressAlert" />
    
    <Button
        android:id="@+id/btnShowCheckins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_showCheckins" />

    <TextView
        android:id="@+id/lnkGoToWebsite"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autoLink="web"
        android:ems="10"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:text="@string/checkins_url_description"
        android:textColor="@color/link_color" />

</LinearLayout>